[gd_scene load_steps=3 format=3 uid="uid://bammo0jopy7an"]

[ext_resource type="PackedScene" uid="uid://16ah2h5qkowx" path="res://GD1/MainMenu.tscn" id="1_gr7rh"]
[ext_resource type="Script" path="res://GD1/Scripts/SceneManager.gd" id="1_i4iiy"]

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_i4iiy")

[node name="MainMenu" parent="." instance=ExtResource("1_gr7rh")]

[connection signal="Exit" from="MainMenu" to="." method="_on_main_menu_exit"]
[connection signal="StartGame" from="MainMenu" to="." method="_on_main_menu_start_game"]
